[gd_scene load_steps=2 format=3 uid="uid://dok2n1wg3fwuq"]

[ext_resource type="Script" path="res://UI/CardPanel.gd" id="1_aljor"]

[node name="CardPanel" type="Panel"]
offset_right = 350.0
offset_bottom = 260.0
size_flags_vertical = 3
script = ExtResource("1_aljor")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CardTitle" type="Label" parent="VBoxContainer"]
offset_right = 350.0
offset_bottom = 26.0
text = "[ CARD TITLE ]"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 3
anchors_preset = 0
offset_top = 30.0
offset_right = 350.0
offset_bottom = 260.0
size_flags_vertical = 3

[node name="Row1" type="HBoxContainer" parent="VBoxContainer/Control"]
offset_top = -8.0
offset_right = 350.0
offset_bottom = -8.0

[node name="Row2" type="HBoxContainer" parent="VBoxContainer/Control"]
offset_top = -4.0
offset_right = 350.0
offset_bottom = -4.0
